K8s/Kustomize/base/sockshop/session-db/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: session-db
  # annotations:
  #   prometheus.io/scrape: 'true'
  labels:
    name: session-db
spec:
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  selector:
    name: session-db
