K8s/Kustomize/base/sockshop/session-db/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: session-db-access
spec:
  podSelector:
    matchLabels:
      name: session-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: front-end
      ports:
        - protocol: TCP
          port: 6379
# there's no network policy for session-db in the original repo!!!!!!!!!
